# json-to-multicsv

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/json_to_multicsv/: cli.py  converter.py  parser.py
tests/: test_cli.py  test_column_collision.py  test_fuzz_parser.py  test_parse_path_spec.py
tests/fixtures/basic/output.expected/: item.appendix.csv  item.csv  item.genres.csv  item.sales.csv
tests/fixtures/binary/output.expected/: main.csv
tests/fixtures/column-list/output.expected/: shapes.csv
tests/fixtures/key-name/: input.json
tests/fixtures/key-name/output.expected/: item.csv  item.sub.csv
tests/fixtures/tmtour/output.expected/: main.csv  main.game.csv  main.option.csv
tests/fixtures/toplevel-list/output.expected/: greetings.csv
