[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json-to-multicsv"
version = "0.1.0"
description = "Convert hierarchical JSON data into multiple related CSV files"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "pre-commit", "black"]

[project.scripts]
json-to-multicsv = "json_to_multicsv.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "UP",  # pyupgrade (modernize code)
  "PLC", # Pylint conventions
  "PT",  # pytest rules
]
ignore = [
  "E501", # line length handled by formatter
]
