[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json-to-multicsv"
version = "0.1.2"
description = "Convert hierarchical JSON data into multiple related CSV files"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "Forest Gregg", email = "fgregg@bunkum.us" },
]
keywords = ["json", "csv", "etl", "data-conversion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "click",
]

[project.urls]
Homepage = "https://github.com/fgregg/json-to-multicsv"
Repository = "https://github.com/fgregg/json-to-multicsv"
Issues = "https://github.com/fgregg/json-to-multicsv/issues"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "pre-commit", "black", "hypothesis"]

[project.scripts]
json-to-multicsv = "json_to_multicsv.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "UP",  # pyupgrade (modernize code)
  "PLC", # Pylint conventions
  "PT",  # pytest rules
]
ignore = [
  "E501", # line length handled by formatter
]
